--- a/src/components/categories/Categories.css
+++ b/src/components/categories/Categories.css
@@ -1,7 +1,9 @@
 .Category {
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 7px;
     padding: 5px;
+    border-radius: 5px;
+    margin: 20px 0;
 }
 
 .Category:hover {
