--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     text-decoration: none;
     padding: 15px;
     background-color: rgba(0, 0, 0, 0.15);;
