--- a/src/components/product/Product.css
+++ b/src/components/product/Product.css
@@ -6,17 +6,24 @@
     grid-template-columns: 280px;
     grid-template-rows: 80px 50px 1fr 50px 50px;
     justify-items: center;
-    box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.5)
+    box-shadow: 0px -5px 10px 0px rgba(0, 0, 0, 0.5);
+   
 }
 
-img {
+.Image {
     max-width: 200px;
+}
+
+.Image:hover {
+    transform: scale(1.05);
+    cursor: pointer;
 }
 
 .Image-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    /* transition: transform 5000ms ease; */
 }
 
 .Product-title {
